# docs/swagger.json
@@ -82,7 +82,7 @@
                         "type": "string",
                         "description": "string enums, default: date",
                         "name": "orderBy",
-                        "in": "path"
+                        "in": "query"
                     },
                     {
                         "enum": [
@@ -92,13 +92,13 @@
                         "type": "string",
                         "description": "string enums, default: DESC",
                         "name": "order",
-                        "in": "path"
+                        "in": "query"
                     },
                     {
                         "type": "integer",
                         "description": "default: 100",
                         "name": "limit",
-                        "in": "path"
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -150,7 +150,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.changingBalanceRequest"
+                            "$ref": "#/definitions/api.ChangingBalanceRequest"
                         }
                     }
                 ],
@@ -175,7 +175,7 @@
         }
     },
     "definitions": {
-        "api.changingBalanceRequest": {
+        "api.ChangingBalanceRequest": {
             "type": "object",
             "properties": {
                 "amount": {
@@ -186,7 +186,7 @@
                     "description": "required for a not transfer transactions",
                     "type": "string"
                 },
-                "isTransfer": {
+                "is_transfer": {
                     "description": "reports whether transaction is a transfer or not, default false",
                     "type": "boolean"
                 },
